--- a/index.css
+++ b/index.css
@@ -6,6 +6,7 @@ html {
 body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
     
 }
 
@@ -285,5 +286,13 @@ ul a,
 
     .header {
         width: 100%;
+    }
+
+    .hero-left-content {
+        min-width: 20em;
+    }
+
+    .hero-image {
+        min-width: 20em;
     }
   }
